# ds-eda-project-template

./: .env.example  .gitignore  00_Final-Notebook.ipynb  01_assignment.md  02_workflow.md  03_fetching_the_data_eda copy.ipynb  03_fetching_the_data_eda.ipynb  04_eda ADW.ipynb  04_eda_Olena reformed filters.ipynb  04_eda_Olena.ipynb  04_eda_Test.ipynb  King_County_Historic_Golf_Map.pptx  README.md  data_relationships_addon.ipynb  deliverables_0617.md  dollarpersqft_addon.ipynb  historic_golf_zipcodes.ipynb  king_county_historic_golf_zips.csv  notes.md  pyproject.toml
